<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:orderingFromXml="true" android:key="Intercept"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/bedtime">
        <SwitchPreference android:title="@string/spm_class_title_intelligent" android:key="sleep_sp" android:summary="@string/bedtime_auto_sp" android:defaultValue="false" />
        <Preference android:title="@string/intelligent_time_frame_mode" android:key="time_frame_mode" android:summary="@string/intelligent_time_frame_mode_summary" />
        <Preference android:layout="@lewa:layout/stateful_preference_holo_light" android:title="@string/intelligent_time_set" android:key="set_time" android:dependency="sleep_sp" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/spm_custom_settings_intelli_other">
        <ListPreference android:persistent="false" android:entries="@array/battery_low_entries" android:title="@string/spm_custom_settings_intelli_batterylow_title" android:key="spm_battery_low_warning" android:summary="@string/spm_custom_settings_intelli_batterylow_summy" android:widgetLayout="@null" android:dialogTitle="@string/spm_custom_settings_intelli_batterylow_title" android:entryValues="@array/battery_low_values" />
        <Preference android:title="@string/spm_battery_calibration" android:key="spm_battery_calibration" android:summary="@string/spm_battery_calibration_summary" android:widgetLayout="@null" />
    </PreferenceCategory>
</PreferenceScreen>