<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:orderingFromXml="true" android:key="Intercept"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/spm_custom_settings_closing_title" android:key="spm_custom_settings_closing">
        <CheckBoxPreference android:title="@string/dev_wifi" android:key="spm_dev_wifi" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/dev_gps" android:key="spm_dev_gps" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/dev_bluetooth" android:key="spm_dev_bluetooth" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/dev_data" android:key="spm_dev_data" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/dev_haptic" android:key="spm_dev_haptic" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/spm_screen_sync_show" android:key="spm_dev_sync" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/dev_key_bglight" android:key="spm_dev_backlight" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/spm_custom_settings_setting_max_title" android:key="spm_custom_settings_setting_max">
        <ListPreference android:persistent="false" android:entries="@array/screen_timeout_entries" android:title="@string/spm_screen_timeout_show" android:key="spm_dev_time_out" android:dialogTitle="@string/spm_screen_timeout_show" android:entryValues="@array/screen_timeout_values" />
        <Preference android:title="@string/spm_screen_light_show" android:key="spm_dev_brghtiness" android:defaultValue="10" />
    </PreferenceCategory>
</PreferenceScreen>