<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/spm_mode_dialog_linearlayout" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/spm_mode_dialog_communication_rl" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <View android:id="@id/spm_mode_dialog_communication_view" android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginRight="13.0dip">
            <TextView android:textColor="#ffff0000" android:id="@id/spm_mode_dialog_communication_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dev_call_msg" android:layout_below="@id/spm_mode_dialog_title" />
            <TextView android:textColor="#ffff0000" android:id="@id/spm_mode_dialog_communication_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/spm_mode_dialog_title" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
    <View android:id="@id/spm_mode_dialog_communication_view" android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" />
    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RelativeLayout android:id="@id/spm_mode_dialog_bluetooth_rl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="13.0dip">
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_bluetooth_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dev_bluetooth" android:layout_below="@id/spm_mode_dialog_communication_view" />
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_bluetooth_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/spm_mode_dialog_communication_view" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View android:id="@id/spm_mode_dialog_bluetooth_view" android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" android:layout_below="@id/spm_mode_dialog_bluetooth_rl" />
    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/spm_mode_dialog_bluetooth_rl" />
    <RelativeLayout android:id="@id/spm_mode_dialog_touch_rl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="13.0dip">
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_touch_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dev_haptic" android:layout_below="@id/spm_mode_dialog_bluetooth_view" />
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_touch_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/spm_mode_dialog_bluetooth_view" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View android:id="@id/spm_mode_dialog_touch_view" android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" android:layout_below="@id/spm_mode_dialog_touch_rl" />
    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/spm_mode_dialog_touch_rl" />
    <RelativeLayout android:id="@id/spm_mode_dialog_data_rl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="13.0dip">
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_data_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dev_data" android:layout_below="@id/spm_mode_dialog_touch_view" />
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_data_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/spm_mode_dialog_touch_view" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View android:id="@id/spm_mode_dialog_data_view" android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" android:layout_below="@id/spm_mode_dialog_data_rl" />
    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/spm_mode_dialog_data_rl" />
    <RelativeLayout android:id="@id/spm_mode_dialog_bright_rl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="13.0dip">
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_bright_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/spm_screen_light_show" android:layout_below="@id/spm_mode_dialog_data_view" />
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_bright_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/spm_mode_dialog_data_view" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View android:id="@id/spm_mode_dialog_bright_view" android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" android:layout_below="@id/spm_mode_dialog_bright_rl" />
    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/spm_mode_dialog_bright_rl" />
    <RelativeLayout android:id="@id/spm_mode_dialog_sync_rl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="13.0dip">
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_sync_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/spm_screen_sync_show" android:layout_below="@id/spm_mode_dialog_bright_text" />
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_sync_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/spm_mode_dialog_bright_value" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View android:id="@id/spm_mode_dialog_sync_view" android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" android:layout_below="@id/spm_mode_dialog_bright_view" />
    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/spm_mode_dialog_bright_view" />
    <RelativeLayout android:id="@id/spm_mode_dialog_timeout_rl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="13.0dip">
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_timeout_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/spm_screen_timeout_show" android:layout_below="@id/spm_mode_dialog_sync_view" />
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_timeout_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/spm_mode_dialog_sync_view" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View android:id="@id/spm_mode_dialog_timeout_view" android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" android:layout_below="@id/spm_mode_dialog_timeout_view" />
    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/spm_mode_dialog_timeout_view" />
    <RelativeLayout android:id="@id/spm_mode_dialog_gps_rl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="13.0dip">
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_gps_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dev_gps" android:layout_below="@id/spm_mode_dialog_timeout_view" />
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_gps_text_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/spm_mode_dialog_timeout_view" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View android:id="@id/spm_mode_dialog_gps_view" android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" android:layout_below="@id/spm_mode_dialog_gps_view" />
    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/spm_mode_dialog_gps_view" />
    <RelativeLayout android:id="@id/spm_mode_dialog_wlan_rl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="13.0dip">
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_wlan_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dev_wifi" android:layout_below="@id/spm_mode_dialog_gps_view" />
        <TextView android:textColor="#ff000000" android:id="@id/spm_mode_dialog_wlan_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/spm_mode_dialog_gps_view" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>